# halo

./: Cargo.toml  LICENSE  README.md  THEMES.md  WARP.md  build_themes.sh
src/: app.rs  command.rs  completion.rs  error.rs  event.rs  main.rs  state.rs  themes.rs  ui.rs
themes/: catppuccin-mocha.toml  cyber-nord.toml  dracula.toml  gruvbox-dark.toml  monokai.toml  nord.toml  one-dark.toml  solarized-dark.toml  tokyo-night.toml
