[package]
name = "halo-shell"
version = "0.2.2"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.2"
dirs = "6.0.0"
tokio = { version = "1.46.1", features = ["full"]}
tokio-utils = "0.1.2"
indicatif = "0.18.0"
anyhow = "1.0.98"
shlex = "1.3.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
lazy_static = "1.5.0"
users = "0.11.0"
git2 = "0.20.2"