[package]
name = "halo-shell"
version = "0.2.2"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
shlex = "1.3"
anyhow = "1.0"
dirs = "5.0"
users = "0.11"
git2 = "0.18"
zip = "0.6"